--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ AzureDocumentDbTypeProvider/.vs/
 AzureDocumentDbTypeProvider/packages/
 AzureDocumentDbTypeProvider/bin/
 AzureDocumentDbTypeProvider/obj/
+/.vs/AzureDocumentDbTypeProvider/v14/.suo
+/packages
