--- a/AzureDocumentDbTypeProvider.Tests/AzureDocumentDbTypeProvider.Tests/AzureDocumentDbTypeProvider.Tests.fsproj
+++ b/AzureDocumentDbTypeProvider.Tests/AzureDocumentDbTypeProvider.Tests/AzureDocumentDbTypeProvider.Tests.fsproj
@@ -54,9 +54,8 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
-    <Compile Include="Library1.fs" />
-    <None Include="Script.fsx" />
     <Content Include="packages.config" />
+    <Compile Include="Tests.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
