--- a/AzureDocumentDbTypeProvider.Tests/AzureDocumentDbTypeProvider.Tests/AzureDocumentDbTypeProvider.Tests.fsproj
+++ b/AzureDocumentDbTypeProvider.Tests/AzureDocumentDbTypeProvider.Tests/AzureDocumentDbTypeProvider.Tests.fsproj
@@ -95,6 +95,7 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <Import Project="..\..\.paket\paket.targets" />
   <Choose>
     <When Condition="$(TargetFrameworkIdentifier) == '.NETFramework' And ($(TargetFrameworkVersion) == 'v4.5' Or $(TargetFrameworkVersion) == 'v4.5.1' Or $(TargetFrameworkVersion) == 'v4.5.2' Or $(TargetFrameworkVersion) == 'v4.5.3' Or $(TargetFrameworkVersion) == 'v4.6' Or $(TargetFrameworkVersion) == 'v4.6.1' Or $(TargetFrameworkVersion) == 'v4.6.2' Or $(TargetFrameworkVersion) == 'v4.6.3')">
       <ItemGroup>
@@ -762,6 +763,7 @@
   <Import Project="..\..\packages\Microsoft.Azure.DocumentDB\build\$(__paket__Microsoft_Azure_DocumentDB_targets).targets" Condition="Exists('..\..\packages\Microsoft.Azure.DocumentDB\build\$(__paket__Microsoft_Azure_DocumentDB_targets).targets')" Label="Paket" />
   <Import Project="..\..\packages\xunit.runner.visualstudio\build\$(__paket__xunit_runner_visualstudio_targets).targets" Condition="Exists('..\..\packages\xunit.runner.visualstudio\build\$(__paket__xunit_runner_visualstudio_targets).targets')" Label="Paket" />
   <ItemGroup>
+    <Content Include="App.config" />
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="TestAccountConfig.fs" />
     <Compile Include="Tests.fs" />
