--- a/AzureDocumentDbTypeProvider.Tests/AzureDocumentDbTypeProvider.Tests/AzureDocumentDbTypeProvider.Tests.fsproj
+++ b/AzureDocumentDbTypeProvider.Tests/AzureDocumentDbTypeProvider.Tests/AzureDocumentDbTypeProvider.Tests.fsproj
@@ -770,6 +770,9 @@
     <None Include="paket.references" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="AzureDocumentDbTypeProvider">
+      <HintPath>..\..\AzureDocumentDbTypeProvider\bin\Debug\AzureDocumentDbTypeProvider.dll</HintPath>
+    </Reference>
     <Reference Include="mscorlib" />
     <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <Private>True</Private>
