--- a/AzureDocumentDbTypeProvider/AzureDocumentDbTypeProvider.fsproj
+++ b/AzureDocumentDbTypeProvider/AzureDocumentDbTypeProvider.fsproj
@@ -74,7 +74,7 @@
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="Config.fs" />
     <Compile Include="Helpers.fs" />
-    <Compile Include="Container.fs" />
+    <Compile Include="Collection.fs" />
     <Compile Include="Database.fs" />
     <Compile Include="DocumentDbTypeProvider.fs" />
     <None Include="paket.references" />
