--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,8 @@ branches:
     - nuget
 
 environment:
-  variable1: "var1"
+  variable1:
+    secure: Ja0uNa7EuU9tzLawbkS8gg==
   testaccuri:
     secure: hc4mzI6fMrtX6vJgdjjphqVQfmCJOq5HFVglyWqAky4+o0UuKRpjuu4ftwyPx7UY
   testacckey:
