amend appveyor.yml to build artifact for nuget package

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,7 +12,7 @@ environment:
     secure: r0JyLN61Eww9DVxuDfc9y+vy3GLfeJ1A69VkHek9II/gFaqR/DJpwMInutX6XW21
 
 artifacts:
-  - path: ./deploy
+  - path: ./deploy/*.nupkg
     name: NugetPackage
 
 build_script:
